# availability-monitor

./: LICENSE  README.md  docker-compose.example.yml  pyproject.toml
availability_monitor/: __init__.py  cli.py  job.py  protocol.py  storage.py  telegram.py  webapp.py
docker/: Dockerfile.slim  entrypoint.sh
static/: style.css
templates/: base.html  dashboard.html  login.html
tests/: test_job.py  test_storage.py  test_telegram.py
