[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "availability-monitor"
version = "0.1.0"
description = "Reusable availability polling framework with CLI, SQLite, Telegram, and Web UI"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
  "requests>=2.28,<3",
  "fastapi>=0.110,<1",
  "uvicorn[standard]>=0.29,<1",
  "jinja2>=3.1,<4",
  "python-multipart>=0.0.9,<1",
  "itsdangerous>=2.1,<3",
]

[project.optional-dependencies]
dev = ["pytest>=8,<9"]

[tool.setuptools.packages.find]
where = ["."]
include = ["availability_monitor*"]

[tool.setuptools.package-data]
availability_monitor = ["../templates/*", "../static/*"]
